--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>Lista de Regalos Baby Shower</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Firebase -->
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-analytics.js";
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
@@ -78,11 +81,15 @@
 <script>
   // 🔑 CONFIGURACIÓN FIREBASE (REEMPLAZAR)
   var firebaseConfig = {
-    apiKey: "TU_API_KEY",
-    authDomain: "TU_PROYECTO.firebaseapp.com",
-    databaseURL: "https://TU_PROYECTO.firebaseio.com",
-    projectId: "TU_PROYECTO",
-  };
+      apiKey: "AIzaSyBsYaMfBRzmDvTAudfyD_fhVAhFOWa9Z7A",
+    authDomain: "baby-shower-36afa.firebaseapp.com",
+    databaseURL: "https://baby-shower-36afa-default-rtdb.firebaseio.com",
+    projectId: "baby-shower-36afa",
+    storageBucket: "baby-shower-36afa.firebasestorage.app",
+    messagingSenderId: "653796409549",
+    appId: "1:653796409549:web:4c43f6c74258a98881a984",
+    measurementId: "G-SB4NLY4K7Z"
+    };
 
   firebase.initializeApp(firebaseConfig);
   var database = firebase.database();
