--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+ <head>
   <meta charset="UTF-8">
-  <title>Lista de Regalos Baby Shower</title>
+  <title>Lista de Regalos - Baby Shower</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-analytics.js";
+  <!-- Firebase v8 (NO módulos) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
 
   <style>
     body {
@@ -146,4 +144,5 @@
 
 </body>
 </html>
+
 
