--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
 
   <!-- Título que aparece en la pestaña del navegador -->
-  <title>Lista de Regalos - Baby Shower</title>
+  <title>Lista de Regalos - Baby Shower Simon</title>
 
   <!-- Hace que la página se adapte a celulares -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,6 +41,20 @@
       border-bottom: 1px solid #ddd;
       font-size: 14px;
     }
+{
+background-image: url("fondo.jpg");    /* Imagen de fondo */
+    background-size: cover;                /* La imagen cubre toda la pantalla */
+    background-position: center center;    /* Centrada */
+    background-repeat: no-repeat;          /* No se repite */
+    background-attachment: fixed;          /* Fija al hacer scroll */
+
+    padding: 20px;
+    }
+    /* Capa blanca semitransparente para que se lea bien el contenido */
+  table {
+    background: rgba(255, 255, 255, 0.95);
+  }
+    
     th {
       background: #dfefff;
     }
@@ -156,3 +170,4 @@
 
 </body>
 </html>
+
