--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       font-size: 14px;
     }
 {
-background-image: url("[![descarga-(66).jpg](https://i.postimg.cc/P5br0N2f/descarga-(66).jpg)](https://postimg.cc/pmTHFWw3)");    /* Imagen de fondo */
+background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");    /* Imagen de fondo */
     background-size: cover;                /* La imagen cubre toda la pantalla */
     background-position: center center;    /* Centrada */
     background-repeat: no-repeat;          /* No se repite */
@@ -170,5 +170,6 @@ background-image: url("[![descarga-(66).jpg](https://i.postimg.cc/P5br0N2f/desca
 
 </body>
 </html>
+
 
 
