--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
 
   <!-- Título que aparece en la pestaña del navegador -->
-  <title>Lista de Regalos - Baby Shower Simon</title>
+  <title></title>
 
   <!-- Hace que la página se adapte a celulares -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -170,6 +170,7 @@ background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");    /* 
 
 </body>
 </html>
+
 
 
 
