--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
 
   <!-- Título que aparece en la pestaña del navegador -->
-  <title></title>
+  <title>Lista de Regalos - Baby Shower Simon</title>
 
   <!-- Hace que la página se adapte a celulares -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,7 +80,7 @@ background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");    /* 
 <body>
 
 <!-- Título visible -->
-<h1>🎁 Lista de Regalos – Baby Shower</h1>
+<h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
 <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
 
 <!-- Tabla donde se cargan los artículos -->
@@ -170,6 +170,7 @@ background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");    /* 
 
 </body>
 </html>
+
 
 
 
