--- a/index.html
+++ b/index.html
@@ -41,20 +41,7 @@
       border-bottom: 1px solid #ddd;
       font-size: 14px;
     }
-{
-background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");    /* Imagen de fondo */
-    background-size: cover;                /* La imagen cubre toda la pantalla */
-    background-position: center center;    /* Centrada */
-    background-repeat: no-repeat;          /* No se repite */
-    background-attachment: fixed;          /* Fija al hacer scroll */
-
-    padding: 20px;
-    }
-    /* Capa blanca semitransparente para que se lea bien el contenido */
-  table {
-    background: rgba(255, 255, 255, 0.95);
-  }
-    
+   
     th {
       background: #dfefff;
     }
@@ -77,8 +64,19 @@ background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");    /* 
   </style>
 </head>
 
-<body>
+<body
+background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");>    /* Imagen de fondo */
+    background-size: cover;                /* La imagen cubre toda la pantalla */
+    background-position: center center;    /* Centrada */
+    background-repeat: no-repeat;          /* No se repite */
+    background-attachment: fixed;          /* Fija al hacer scroll */
 
+    padding: 20px;
+    }
+    /* Capa blanca semitransparente para que se lea bien el contenido */
+  table {
+    background: rgba(255, 255, 255, 0.95);
+  }
 <!-- Título visible -->
 <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
 <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
@@ -170,6 +168,7 @@ background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");    /* 
 
 </body>
 </html>
+
 
 
 
