--- a/index.html
+++ b/index.html
@@ -65,18 +65,8 @@
 </head>
 
 <body
-background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");>    /* Imagen de fondo */
-    background-size: cover;                /* La imagen cubre toda la pantalla */
-    background-position: center center;    /* Centrada */
-    background-repeat: no-repeat;          /* No se repite */
-    background-attachment: fixed;          /* Fija al hacer scroll */
-
-    padding: 20px;
-    }
-    /* Capa blanca semitransparente para que se lea bien el contenido */
-  table {
-    background: rgba(255, 255, 255, 0.95);
-  }
+background-image: url("[![descarga-(66).jpg](https://i.postimg.cc/P5br0N2f/descarga-(66).jpg)](https://postimg.cc/pmTHFWw3)");>    /* Imagen de fondo */
+    
 <!-- Título visible -->
 <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
 <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
@@ -168,6 +158,7 @@ background-image: url("https://i.postimg.cc/P5br0N2f/descarga-(66).jpg");>    /*
 
 </body>
 </html>
+
 
 
 
