--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
   </style>
 </head>
 
-<body
-background-image: url("[![descarga-(66).jpg](https://i.postimg.cc/P5br0N2f/descarga-(66).jpg)](https://postimg.cc/pmTHFWw3)");>    /* Imagen de fondo */
-    
+<body>
+ <img src="https://postimg.cc/pmTHFWw3"> 
 <!-- Título visible -->
 <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
 <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
@@ -158,6 +157,7 @@ background-image: url("[![descarga-(66).jpg](https://i.postimg.cc/P5br0N2f/desca
 
 </body>
 </html>
+
 
 
 
