--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 
 <body>
- <img src="https://postimg.cc/pmTHFWw3"> 
+<img src="descarga (66).jfif" alt="Baby Shower" width="200">
 <!-- Título visible -->
 <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
 <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
@@ -157,6 +157,7 @@
 
 </body>
 </html>
+
 
 
 
