--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 
 <body>
 <img src="principe.jpg" alt="Baby Shower" width="900">
+  <style>
+  body {
+    background-image: url("principe.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+</style>
 <!-- Título visible -->
 <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
 <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
@@ -157,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
