--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 
   <!-- Estilos visuales de la página -->
   <style>
+  
     body {
+      background-image: url("principe.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      margin: 0;
+      padding: 20px;
+    }
+    
+      body {
       font-family: Arial, sans-serif;
       background: #f2f5f8;
       padding: 40px;
@@ -63,17 +74,6 @@
     }
   </style>
 </head>
-
-<body>
-<img src="principe.jpg" alt="Baby Shower" width="900">
-  <style>
-  body {
-    background-image: url("principe.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-</style>
 <!-- Título visible -->
 <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
 <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
