--- a/index.html
+++ b/index.html
@@ -1,98 +1,109 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <!-- Permite caracteres especiales como tildes y ñ -->
   <meta charset="UTF-8">
-
-  <!-- Título que aparece en la pestaña del navegador -->
   <title>Lista de Regalos - Baby Shower Simon</title>
-
-  <!-- Hace que la página se adapte a celulares -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Carga Firebase versión 8 (compatible con GitHub Pages) -->
+  <!-- Firebase v8 -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-  <!-- Estilos visuales de la página -->
   <style>
-  
+    /* Fondo general de la página */
     body {
       background-image: url("principe.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      margin: 0;
-      padding: 10px;
-    
+
       font-family: Arial, sans-serif;
-      background: #f2f5f8;
-      padding: 40px;
+      margin: 0;
+      padding: 30px;
     }
+
+    /* Contenedor blanco para el contenido */
+    .contenedor {
+      background: rgba(255, 255, 255, 0.95);
+      max-width: 1100px;
+      margin: auto;
+      padding: 20px;
+      border-radius: 12px;
+    }
+
     h1 {
       text-align: center;
       color: #2c3e50;
     }
+
     p {
       text-align: center;
       color: #555;
     }
+
     table {
       width: 100%;
-      max-width: 1000px;
-      margin: auto;
       border-collapse: collapse;
-      background: #ffffff;
+      margin-top: 20px;
     }
+
     th, td {
       padding: 10px;
       border-bottom: 1px solid #ddd;
       font-size: 14px;
+      text-align: center;
     }
-   
+
     th {
       background: #dfefff;
     }
+
     button {
       background: #3498db;
       color: #fff;
       border: none;
-      padding: 6px 10px;
+      padding: 6px 12px;
       border-radius: 4px;
       cursor: pointer;
     }
+
     button:disabled {
       background: #bbb;
       cursor: not-allowed;
     }
+
     .reservado {
       color: red;
       font-weight: bold;
     }
   </style>
 </head>
-<!-- Título visible -->
-<h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
-<p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
 
-<!-- Tabla donde se cargan los artículos -->
-<table>
-  <thead>
-    <tr>
-      <th>Categoría</th>
-      <th>Artículo</th>
-      <th>Edad recomendada</th>
-      <th>Estado</th>
-      <th>Acción</th>
-    </tr>
-  </thead>
-  <!-- Aquí JavaScript insertará las filas -->
-  <tbody id="lista"></tbody>
-</table>
+<body>
+
+<div class="contenedor">
+
+  <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
+  <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Categoría</th>
+        <th>Artículo</th>
+        <th>Edad recomendada</th>
+        <th>Estado</th>
+        <th>Acción</th>
+      </tr>
+    </thead>
+    <tbody id="lista"></tbody>
+  </table>
+
+</div>
 
 <script>
-  // 🔑 Configuración de Firebase (datos de tu proyecto)
+  // Configuración Firebase
   var firebaseConfig = {
     apiKey: "AIzaSyBsYaMfBRzmDvTAudfyD_fhVAhFOWa9Z7A",
     authDomain: "baby-shower-36afa.firebaseapp.com",
@@ -100,13 +111,9 @@
     projectId: "baby-shower-36afa"
   };
 
-  // Inicializa Firebase
   firebase.initializeApp(firebaseConfig);
-
-  // Referencia a la base de datos
   var database = firebase.database();
 
-  // 📦 Lista de artículos (estos siempre se muestran)
   const articulos = [
     ["Pañales","Pañales niño","Recién nacido (0-1 mes)"],
     ["Pañales","Pañales niño","0-2 meses"],
@@ -122,40 +129,34 @@
     ["Otros","Inodoro entrenador","24-36 meses"]
   ];
 
-  // Referencia al <tbody>
   const lista = document.getElementById("lista");
 
-  // Función que dibuja la tabla
   function renderizar(reservados = {}) {
     lista.innerHTML = "";
 
     articulos.forEach((item, index) => {
-      const tr = document.createElement("tr");
       const reservado = reservados[index] === true;
 
-      tr.innerHTML = `
-        <td>${item[0]}</td>
-        <td>${item[1]}</td>
-        <td>${item[2]}</td>
-        <td>${reservado ? "<span class='reservado'>Reservado</span>" : "Disponible"}</td>
-        <td>
-          <button ${reservado ? "disabled" : ""} onclick="reservar(${index})">
-            Elegir
-          </button>
-        </td>
+      lista.innerHTML += `
+        <tr>
+          <td>${item[0]}</td>
+          <td>${item[1]}</td>
+          <td>${item[2]}</td>
+          <td>${reservado ? "<span class='reservado'>Reservado</span>" : "Disponible"}</td>
+          <td>
+            <button ${reservado ? "disabled" : ""} onclick="reservar(${index})">
+              Elegir
+            </button>
+          </td>
+        </tr>
       `;
-
-      lista.appendChild(tr);
     });
   }
 
-  // Escucha cambios en Firebase (tiempo real)
-  database.ref("reservas").on("value", function(snapshot) {
-    const reservados = snapshot.val() || {};
-    renderizar(reservados);
+  database.ref("reservas").on("value", snapshot => {
+    renderizar(snapshot.val() || {});
   });
 
-  // Guarda una reserva en Firebase
   function reservar(index) {
     database.ref("reservas/" + index).set(true);
   }
