--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style>
     /* Fondo general de la página */
     body {
-      background-image: url("principe.jpg");
+      background-image: url("animalitos.jpg");
       background-size: 90%;
       background-position: center;
       background-repeat: no-repeat;
@@ -164,6 +164,7 @@
 
 </body>
 </html>
+
 
 
 
