--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     /* Fondo general de la página */
     body {
       background-image: url("animalitos.jpg");
-      background-size: 90%;
-      background-position: center;
+      background-size: 70%;
+      background-position: right center;
       background-repeat: no-repeat;
       background-attachment: fixed;
 
@@ -164,6 +164,7 @@
 
 </body>
 </html>
+
 
 
 
