--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <div class="contenedor">
 
-  <h1>🎁 Lista de Regalos – Baby Shower Simon</h1>
+  <h1>🎁 Lista de Regalos – Baby Shower Simón</h1>
   <p>Selecciona un regalo. Una vez elegido, quedará reservado.</p>
 
   <table>
@@ -257,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
