--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
   <style>
     /* Fondo general de la página */
     body {
+      margin: 0;
+      min-height: 100vh;
       background-image: url("animalitos.jpg");
       background-size: 35%;
       background-position: right center;
       background-repeat: no-repeat;
       background-attachment: fixed;
+        }
 
+    @media (max-width: 768px) {
+    body {
+      background-position: top;
+    }
+  }
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 10px;
@@ -257,6 +265,7 @@
 
 </body>
 </html>
+
 
 
 
