--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style>
     /* Fondo general de la página */
     body {
-      margin: 0;
+      margin: 20;
       min-height: 100vh;
       background-image: url("animalitos.jpg");
       background-size: 35%;
@@ -20,7 +20,18 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
         }
+/* Ajustes para celular */
+  @media (max-width: 1024px) {
+    body {
+      background-size: 130%;
+    }
+  }
+</style>
 
+</style>
+
+
+  
    }
       font-family: Arial, sans-serif;
       margin: 0;
@@ -261,6 +272,7 @@
 
 </body>
 </html>
+
 
 
 
