--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
       background-size: 35%;
       background-position: right center;
       background-repeat: no-repeat;
+      background-attachment: fixed;
               
 /* Ajustes para celular */
   @media (max-width: 1024px) {
     body {
-      background-size: 130%;
+      background-size: 150%;
+      background-position: right center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
   }
  
@@ -265,6 +269,7 @@
 
 </body>
 </html>
+
 
 
 
