--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Lista de Regalos - Baby Shower Simon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 
   <!-- Firebase v8 -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -11,23 +12,26 @@
 
   <style>
     /* Fondo general de la página */
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+     body {
       margin: 20;
       min-height: 100vh;
       background-image: url("animalitos.jpg");
       background-size: 35%;
       background-position: right center;
       background-repeat: no-repeat;
-      background-attachment: fixed;
+      background-attachment: scroll;
               
 /* Ajustes para celular */
-  @media (max-width: 2000px) {
+  @media (max-width: 768px) {
     body {
-      background-size: 150%;
       background-position: right center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-    }
+          }
   }
  
      font-family: Arial, sans-serif;
@@ -269,6 +273,7 @@
 
 </body>
 </html>
+
 
 
 
