--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
   <style>
     /* Fondo general de la página */
+     html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
    
      body {
       margin: 20;
@@ -20,7 +26,7 @@
       background-size: 35%;
       background-position: right center;
       background-repeat: no-repeat;
-      background-attachment: scroll;
+      background-attachment: fixed;
               
 /* Ajustes para celular */
   @media (max-width: 768px) {
@@ -268,6 +274,7 @@
 
 </body>
 </html>
+
 
 
 
