--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       margin: 20;
       min-height: 100vh;
       background-image: url("animalitos.jpg");
-      background-size: 35%;
+      background-size: 37%;
       background-position: right center;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -31,6 +31,9 @@
 /* Ajustes para celular */
   @media (max-width: 768px) {
     body {
+      margin: 5;
+      width: 100%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
+      font-size: 14px; /* Reduce el tamaño de fuente */
       background-position: right center;
           }
   }
@@ -274,6 +277,7 @@
 
 </body>
 </html>
+
 
 
 
