--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     body {
       margin: 5;
       width: 100%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
+      background-size: 130%;
       font-size: 14px; /* Reduce el tamaño de fuente */
       background-position: right center;
           }
@@ -277,6 +278,7 @@
 
 </body>
 </html>
+
 
 
 
