--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
 /* Ajustes para celular */
   @media (max-width: 768px) {
     body {
-      margin: 5;
+      margin: 5px;
+      min-height: 120vh;       
       width: 100%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
       background-size: 130%;
-      font-size: 14px; /* Reduce el tamaño de fuente */
+      font-size: 12px; /* Reduce el tamaño de fuente */
       background-position: right center;
           }
   }
@@ -278,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
