--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      body {
       margin: 20;
       min-height: 100vh;
-      background-image: url("animalitos.jpg");
+      background-image: url("animalitos.png");
       background-size: 37%;
       background-position: right center;
       background-repeat: no-repeat;
@@ -277,6 +277,7 @@
 
 </body>
 </html>
+
 
 
 
