--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
    
      body {
-      margin: 20;
+      margin: 20px;
       min-height: 100vh;
       background-image: url("animalitos.png");
       background-size: 37%;
@@ -32,7 +32,7 @@
     body {
       min-height: 130vh;       
       width: 50%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
-      background-size: 150%;
+      background-size: 50%;
       font-size: 12px; /* Reduce el tamaño de fuente */
       background-position: right center;
           }
@@ -277,6 +277,7 @@
 
 </body>
 </html>
+
 
 
 
