--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
       background-position: right center;
       background-repeat: no-repeat;
       background-attachment: fixed;
-       
+
+        /* Ajustes para celular */
+  @media (max-width: 768px) {
+    body {
+      min-height: 130vh;       
+      width: 50%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
+      background-size: 60%;
+      font-size: 12px; /* Reduce el tamaño de fuente */
+      background-position: right center;
+          }
        
       font-family: Arial, sans-serif;
       margin: 0;
@@ -269,6 +278,7 @@
 
 </body>
 </html>
+
 
 
 
