--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
 
-
+     }
+            /* Ajustes para celular */
+  @media (max-width: 768px) {
+    body {
+      min-height: 130vh;       
+      width: 50%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
+      background-size: 200%;
+      font-size: 12px; /* Reduce el tamaño de fuente */
+      background-position: right center;
+          }
+  }
        
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 10px;
-    }
      
     /* Contenedor blanco para el contenido */
     .contenedor {
@@ -270,6 +276,7 @@
 
 </body>
 </html>
+
 
 
 
