--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
       background-position: right center;
       background-repeat: no-repeat;
       background-attachment: fixed;
-
-     }
+       
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 10px;
+         }
             /* Ajustes para celular */
   @media (max-width: 768px) {
     body {
@@ -276,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
