--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       min-height: 100vh;
       background-image: url("animalitos.png");
       background-position: right center;
+       background-repeat: no-repeat;
       background-size: 37%;
       
       
@@ -36,7 +37,7 @@
       min-height: 120vh;       
       width: 100%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
       background-size: 55%;
-      background-position: right top;
+      background-position: right center;
     background-attachment: scroll; /* ✔ desactiva fixed */
     font-size: 12px;
     }
@@ -277,6 +278,7 @@
 
 </body>
 </html>
+
 
 
 
