--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       background-image: url("animalitos.png");
       background-position: right center;
        background-repeat: no-repeat;
+       background-attachment: fixed;
       background-size: 37%;
       
       
@@ -278,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
