--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       width: 100%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
       background-size: 55%;
       background-position: right center;
+      background-attachment: fixed;
     background-attachment: scroll; /* ✔ desactiva fixed */
     font-size: 12px;
     }
@@ -279,6 +280,7 @@
 
 </body>
 </html>
+
 
 
 
