--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       width: 100%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
       background-size: 55%;
       background-position: right center;
-      background-attachment: fixed;
-    background-attachment: scroll; /* ✔ desactiva fixed */
+     background-attachment: fixed; /* ✔ desactiva fixed */
     font-size: 12px;
     }
   }
@@ -280,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
