--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     body {
       min-height: 120vh;       
       width: 100%; /* Cambia el ancho a pantalla completa en dispositivos pequeños */
-      background-size: 55%;
+      background-size: 60%;
       background-position: right center;
-     background-attachment: fixed; /* ✔ desactiva fixed */
+     background-attachment: fixed; 
     font-size: 12px;
     }
   }
@@ -279,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
