--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     .contenedor {
       background: rgba(255, 255, 255, 0.5);
       max-width: 1100px;
-      margin: auto;
+      margin: 90%;
       padding: 20px;
       border-radius: 12px;
     }
@@ -279,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
