--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     .contenedor {
       background: rgba(255, 255, 255, 0.5);
       max-width: 1100px;
-      margin: 90%;
-      padding: 20px;
+      margin: auto;
+      padding: 10px;
       border-radius: 12px;
     }
      
@@ -279,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
