--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     .contenedor {
       background: rgba(255, 255, 255, 0.5);
       max-width: 1100px;
+      width: 95%;
       margin: auto;
-      padding: 10px;
+      padding: 5px;
       border-radius: 12px;
     }
      
@@ -279,6 +280,7 @@
 
 </body>
 </html>
+
 
 
 
