--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
     .contenedor {
       background: rgba(255, 255, 255, 0.5);
       max-width: 1100px;
+      min-height: 100vh;
       width: 100%;
       margin: auto;
-      padding: 10px;
+      padding: 20px;
       border-radius: 12px;
     }
      
@@ -280,6 +281,7 @@
 
 </body>
 </html>
+
 
 
 
