--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     font-size: 12px;
     }
   }
-          
+   @media (max-width: 768px) {
+  .contenedor {
+    min-height: 100dvh; /* viewport dinámico */
+  }
+}    
               
     /* Contenedor blanco para el contenido */
     .contenedor {
@@ -281,6 +285,7 @@
 
 </body>
 </html>
+
 
 
 
