--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
   ["Ropa","Pijama niño","6-12 meses"],
   ["Ropa","Pijama niño","9-12 meses"],
   ["Ropa","Ruana para bebé","6-12 meses"],
-  ["Ropa","Seminario camisetas","3-6 meses"],
-  ["Ropa","Seminario pantalones","3-6 meses"],
+  ["Ropa","Semanario camisetas","3-6 meses"],
+  ["Ropa","Semanario pantalones","3-6 meses"],
   ["Ropa","Sudadera niño","12-18 meses"],
   ["Ropa","Tenis notuerce","12 meses"],
   ["Ropa","Toalla de baño niño","N"],
@@ -280,6 +280,7 @@
 
 </body>
 </html>
+
 
 
 
